<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BinderMark</string>

    <string name="text_pref_size_value">Size (1–1024 KB):</string>
    <string name="text_pref_transactions_amount">Transactions (128–1024):</string>
    <string name="text_pref_native_method_value">Native method?</string>

    <string name="text_result_default_value">Results:\n\t</string>

    <string name="button_create_backend_value">Create backend</string>
    <string name="button_perform_test_value">Perform test</string>
    <string name="button_destroy_backend_value">Destroy backend</string>

</resources>
