<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_preferences"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_preferences">

        <TextView
            android:id="@+id/text_pref_size"
            style="@android:style/TextAppearance.Material.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_pref_size_value" />

        <EditText
            android:id="@+id/text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/text_pref_size"
            android:inputType="numberDecimal"
            android:textAlignment="viewEnd"
            tools:ignore="LabelFor" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_preferences">

        <TextView
            android:id="@+id/text_pref_native_method"
            style="@android:style/TextAppearance.Material.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_pref_native_method_value" />

        <Switch
            android:id="@+id/switch_native_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/text_pref_native_method" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_result"
        style="@android:style/TextAppearance.Material.Medium"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_preferences"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:padding="@dimen/padding_result"
        android:text="@string/text_result_default_value" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_preferences" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_create_backend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_create_backend_value"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_perform_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_perform_test_value"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_destroy_backend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_destroy_backend_value"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

</LinearLayout>
